# DinoGame

./: .gitignore  CMakeLists.txt  README.md
docs/: COLLISION_LOGIC.md  DAY_NIGHT_CYCLE_FEATURE.md  ENCRYPTION_README.md  GAME_CORE_LOGIC.md
resources/: resources.qrc
src/: CMakeLists.txt  dino.cpp  dino.h  gameconfig.h  gamewindow.cpp  gamewindow.h  main.cpp
